releases/mcp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcp
