releases/qdrant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qdrant
